syntax = "proto3";

package api;

option go_package = "github.com/ppkk/webapp-grpc/grpc/api;grpc_api";

service Api {
  // server streaming call
  rpc StreamNews(RepeatNewsRequest) returns (stream NewsReply);
}

message RepeatNewsRequest {
  int32 count = 1;
  int32 wait_ms = 2;
}

message NewsReply {
  int32 id = 1;
  string message = 2;
}
